# Nicotamai

./: README.md  encode_util.py  entry_points.cfg  hoge  main.py  out.txt  setup.cfg
src/nicotamai/: __init__.py  encode_util.py  main.py
