[metadata]
name = nicotamai
version = attr: nicotamai.__version__
url = hoge
author = sesameoil
author_email = honyamato@gmail.com
licence = CC0 1.0 Universal
licence_file = LICENCE
description = nicotamai: Encode binary 二子玉舞
long_description = file: README.md

[options]
package_dir=
    =src
packages=find:
zip_safe = False
entry_points = file: entry_points.cfg

[options.packages.find]
where=src
